# smartflat

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DATA_INVENTORY.md  NOTEBOOK_ARCHIVE.md  PAPER_BRIDGE.md  QUICKSTART.md  README.md  pyproject.toml
associated-papers/paper-chapter-5/: main.tex  supplementary-material.tex
associated-papers/thesis-part-2/appendix 2/: appendix_2.tex
associated-papers/thesis-part-2/chapter 4/: chapter_4.tex  introduction_to_add.tex
associated-papers/thesis-part-2/chapter 5/: chapter_5.tex
associated-papers/thesis-part-2/chapter 6/: chapter_6.tex
notebooks/: 00_data_overview.ipynb  01_data_preprocessing.ipynb  02_feature_extraction.ipynb  03_recursive_prototyping.ipynb  04_temporal_segmentation.ipynb  05_symbolic_representation.ipynb  06_barycenter_averaging.ipynb  07_clinical_analysis.ipynb  08_figures.ipynb  08_thesis_figures.ipynb
scripts/: collect_outputs.py  periodic_commands_remote.sh  run_cheetah_periodic.sh  run_periodic_local_machine.sh  run_periodic_pomme.sh  run_periodic_ruche.sh
scripts/annotations/: submit_prototypes_annotation.sh
scripts/compute/: ruche_gpu.sh  ruche_gpu_0.sh  ruche_gpu_1.sh  ruche_gpu_2.sh  ruche_gpu_3.sh  ruche_gpu_4.sh  ruche_gpu_5.sh  ruche_gpu_bi.sh  ruche_gpu_bi_r.sh  ruche_gpu_r.sh  ruche_hands.sh  ruche_skeleton.sh  ruche_speech.sh  submit_change_point_detection_experiment.sh  submit_hands.sh  submit_skeleton.sh  submit_speech.sh  submit_video_blocks.sh  submit_video_blocks_reversed.sh
scripts/consolidation/: bring_detection_to_cheetah.sh  rename_compute_files_with_machine_name.sh  ruche_submit_conversion.sh  submit_collate.sh  submit_collate_clean.sh  submit_init_folder_structure.sh  submit_percy.bat  submit_percy.sh  submit_registration.sh  submit_synchronisation.sh
scripts/evaluation/: ruche_clustering_evaluation.sh  ruche_clustering_evaluation_r.sh  submit_clustering_evaluation.sh
scripts/periodic/: submit_collect_outputs.sh  submit_distribute_outputs.sh  submit_metadata.sh  submit_print_compute_log.sh  submit_send_data.sh  submit_wipe_remote.sh
smartflat/: annotation.py  annotation_smartflat.py  constants.py  constants_annotations_prototypes.py  metrics.py
smartflat/configs/: __init__.py  base_config.py  change_points_config.py  clustering_config.py  loader.py  smartflat_config.py  symbolic_config.py  symbolic_config_gold.py
smartflat/datasets/: __init__.py  base_dataset.py  build.py  corrections.py  dataset_gaze.py  dataset_hands.py  dataset_multimodal.py  dataset_skeleton.py  dataset_speech.py  dataset_video_representations.py  filter.py  loader.py  quality_control.py  transform.py  utils.py  visualization.py
smartflat/engine/: __init__.py  builders.py  change_point_detection.py  clustering.py  clustering_evaluation.py  fit_and_solve_cpts_curves.py  pca_model_computation.py  task_manager.py
smartflat/engine/distances/: __init__.py  _alignment_paths.py  _bounding_matrix.py  _eshape_dtw.py  _rtwe.py  _utils.py
smartflat/features/audio/: main.py  speech.ipynb
smartflat/features/consolidation/: TODOs-tmp.md  __init__.py  main_audio_extraction.py  main_collate.py  main_collate_clean.py  main_collect_outputs.py  main_consolidation.py  main_conversion.py  main_conversion_percy.py  main_create_metadata.py  main_distribute_outputs.py  main_housekeeping.py  main_init_folder_structure.py  main_percy.py  main_registration.py  main_send_data.py  main_snapshot.py  main_synchronisation.py  main_wipe_remote.py  submit_conversion_specific_files.sh
smartflat/features/gaze/: main.py
smartflat/features/hands/: hand.ipynb  main.py
smartflat/models/: utils.py
smartflat/utils/: utils.py  utils_clinical.py  utils_coding.py  utils_collate.py  utils_consolidation.py  utils_dataset.py  utils_io.py  utils_paths.py  utils_tests.py  utils_transform.py  utils_video.py  utils_visualization.py
tests/: test_dataset.py
(+28 files in other folders)
